--- a/auth/index.html
+++ b/auth/index.html
@@ -15,6 +15,7 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 <html>
+
 <head>
   <meta charset=utf-8 />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,61 +28,74 @@ limitations under the License.
 
   <link rel="stylesheet" href="main.css">
 </head>
+
 <body>
-<div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
+  <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
 
-  <!-- Header section containing title -->
-  <header class="mdl-layout__header mdl-color-text--white mdl-color--light-blue-700">
-    <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-grid">
-      <div class="mdl-layout__header-row mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--8-col-desktop">
-        <h3>Firebase Authentication</h3>
-      </div>
-    </div>
-  </header>
+    <!-- Header section containing title -->
+    <header class="mdl-layout__header mdl-color-text--white mdl-color--light-blue-700">
+      <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-grid">
+        <div class="mdl-layout__header-row mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--8-col-desktop">
+          <img
+            src="https://firebasestorage.googleapis.com/v0/b/gix-mastery-firebase1902.appspot.com/o/v.png?alt=media&token=2533abcf-a052-4990-abf3-7cfae57c7fa8"
+            style="width:25px;height:auto">
+          <h3>StrucThor App Authentication</h3>
 
-  <main class="mdl-layout__content mdl-color--grey-100">
-    <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-grid">
-
-      <!-- Container for the Table of content -->
-      <div class="mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--12-col-desktop">
-        <div class="mdl-card__title mdl-color--light-blue-600 mdl-color-text--white">
-          <h2 class="mdl-card__title-text">Table of Content</h2>
-        </div>
-        <div class="mdl-card__supporting-text mdl-color-text--grey-600">
-          <p>
-            There are multiple methods available for authentication with Firebase. Ensure that the appropriate sign-in method has been
-            enabled in the Firebase Console authentication panel. Note: custom auth does not require enabling.
-          </p>
-
-          <ul>
-            <li><a href="anon.html">Anonymous</a></li>
-            <li><a href="email-password.html">Email and Password authentication</a></li>
-            <li><a href="email-link.html">Email Link authentication</a></li>
-            <li><a href="customauth.html">Custom Authentication</a> and an Example <a href="exampletokengenerator/auth.html">Custom Token Generator</a><br><br></li>
-
-            <li><a href="phone-visible.html">Phone number sign-in with visible ReCaptcha</a></li>
-            <li><a href="phone-invisible.html">Phone number sign-in with invisible ReCaptcha</a></li>
-            <li><a href="phone-simple.html">Phone number sign-in with simplified popup flow (not recommended for production apps)</a><br><br></li>
-
-            <li><a href="google-popup.html">Google sign-in using Popup</a></li>
-            <li><a href="google-redirect.html">Google sign-in using Redirect</a></li>
-            <li><a href="google-credentials.html">Google sign-in using OAuth Credentials (via Google Sign-in Button)</a><br><br></li>
-
-            <li><a href="facebook-popup.html">Facebook login using Popup</a></li>
-            <li><a href="facebook-redirect.html">Facebook login using Redirect</a></li>
-            <li><a href="facebook-credentials.html">Facebook login using OAuth Credentials (via Facebook Login Button)</a><br><br></li>
-
-            <li><a href="twitter-popup.html">Twitter sign-in using Popup</a></li>
-            <li><a href="twitter-redirect.html">Twitter sign-in using Redirect</a><br><br></li>
-
-            <li><a href="github-popup.html">GitHub sign-in using Popup</a></li>
-            <li><a href="github-redirect.html">GitHub sign-in using Redirect</a></li>
-          </ul>
         </div>
       </div>
 
-    </div>
-  </main>
-</div>
+    </header>
+
+    <main class="mdl-layout__content mdl-color--grey-100">
+      <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-grid">
+
+        <!-- Container for the Table of content -->
+        <div
+          class="mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--12-col-desktop">
+          <div class="mdl-card__title mdl-color--light-blue-600 mdl-color-text--white">
+            <h2 class="mdl-card__title-text">Table of Content</h2>
+          </div>
+          <div class="mdl-card__supporting-text mdl-color-text--grey-600">
+            <p>
+              There are multiple methods available for authentication with Firebase. Ensure that the appropriate sign-in
+              method has been
+              enabled in the Firebase Console authentication panel. Note: custom auth does not require enabling.
+            </p>
+
+            <ul>
+              <li><a href="anon.html">Anonymous</a></li>
+              <li><a href="email-password.html">Email and Password authentication</a></li>
+              <li><a href="email-link.html">Email Link authentication</a></li>
+              <li><a href="customauth.html">Custom Authentication</a> and an Example <a
+                  href="exampletokengenerator/auth.html">Custom Token Generator</a><br><br></li>
+
+              <li><a href="phone-visible.html">Phone number sign-in with visible ReCaptcha</a></li>
+              <li><a href="phone-invisible.html">Phone number sign-in with invisible ReCaptcha</a></li>
+              <li><a href="phone-simple.html">Phone number sign-in with simplified popup flow (not recommended for
+                  production apps)</a><br><br></li>
+
+              <li><a href="google-popup.html">Google sign-in using Popup</a></li>
+              <li><a href="google-redirect.html">Google sign-in using Redirect</a></li>
+              <li><a href="google-credentials.html">Google sign-in using OAuth Credentials (via Google Sign-in
+                  Button)</a><br><br></li>
+
+              <li><a href="facebook-popup.html">Facebook login using Popup</a></li>
+              <li><a href="facebook-redirect.html">Facebook login using Redirect</a></li>
+              <li><a href="facebook-credentials.html">Facebook login using OAuth Credentials (via Facebook Login
+                  Button)</a><br><br></li>
+
+              <li><a href="twitter-popup.html">Twitter sign-in using Popup</a></li>
+              <li><a href="twitter-redirect.html">Twitter sign-in using Redirect</a><br><br></li>
+
+              <li><a href="github-popup.html">GitHub sign-in using Popup</a></li>
+              <li><a href="github-redirect.html">GitHub sign-in using Redirect</a></li>
+            </ul>
+          </div>
+        </div>
+
+      </div>
+    </main>
+  </div>
 </body>
+
 </html>
