--- a/database/index.html
+++ b/database/index.html
@@ -12,6 +12,7 @@
   limitations under the License
 -->
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -44,51 +45,59 @@
 
   <link rel="stylesheet" href="main.css">
 
+
+
+
 </head>
+
 <body>
-<div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
+  <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
 
 
-  <!-- Splash screen -->
-  <section id="page-splash">
-    <h3 class="logo">Database Web Quickstart</h3>
-    <div>
-      <button id="sign-in-button" class="mdl-button--raised mdl-button mdl-js-button mdl-js-ripple-effect"><i class="material-icons">account_circle</i> Sign in with Google</button>
-    </div>
-  </section>
-
-  <!-- Header section containing logo and menu -->
-  <header class="header mdl-layout__header mdl-color-text--white mdl-color--light-blue-700">
-
-    <div class="mdl-layout__header-row titlebar">
+    <!-- Splash screen -->
+    <section id="page-splash">
       <h3 class="logo">Database Web Quickstart</h3>
-      <button id="sign-out-button" class="mdl-button--raised mdl-button mdl-js-button mdl-js-ripple-effect"><i class="material-icons">account_circle</i> Sign out</button>
-    </div>
-
-    <!-- Navigation Bar -->
-    <div class="tab mdl-layout__header-row mdl-color--light-blue-600">
-      <div class="mdl-tab">
-        <div id="menu-recent" class="mdl-layout__tab is-active mdl-button mdl-js-button mdl-js-ripple-effect">
-          <i class="material-icons">new_releases</i> Recent
-        </div>
-        <div id="menu-my-posts" class="mdl-layout__tab mdl-button mdl-js-button mdl-js-ripple-effect">
-          <i class="material-icons">home</i> My posts
-        </div>
-        <div id="menu-my-top-posts" class="mdl-layout__tab mdl-button mdl-js-button mdl-js-ripple-effect">
-          <i class="material-icons">trending_up</i> My top posts
-        </div>
-        <button class="mdl-button mdl-js-button mdl-button--fab mdl-color--amber-400 mdl-shadow--4dp mdl-js-ripple-effect" id="add">
-          <i class="material-icons">mode_edit</i>
-        </button>
+      <div>
+        <button id="sign-in-button" class="mdl-button--raised mdl-button mdl-js-button mdl-js-ripple-effect"><i
+            class="material-icons">account_circle</i> Sign in with Google</button>
       </div>
-    </div>
-  </header>
+    </section>
 
-  <main class="mdl-layout__content mdl-color--grey-100">
+    <!-- Header section containing logo and menu -->
+    <header class="header mdl-layout__header mdl-color-text--white mdl-color--light-blue-700">
 
-    <!-- Show the add post form -->
-    <section class="mdl-grid content" id="add-post" style="display:none">
-      <div class="mdl-cell mdl-cell--12-col mdl-grid">
+      <div class="mdl-layout__header-row titlebar">
+        <h3 class="logo">Database Web Quickstart</h3>
+        <button id="sign-out-button" class="mdl-button--raised mdl-button mdl-js-button mdl-js-ripple-effect"><i
+            class="material-icons">account_circle</i> Sign out</button>
+      </div>
+
+      <!-- Navigation Bar -->
+      <div class="tab mdl-layout__header-row mdl-color--light-blue-600">
+        <div class="mdl-tab">
+          <div id="menu-recent" class="mdl-layout__tab is-active mdl-button mdl-js-button mdl-js-ripple-effect">
+            <i class="material-icons">new_releases</i> Recent
+          </div>
+          <div id="menu-my-posts" class="mdl-layout__tab mdl-button mdl-js-button mdl-js-ripple-effect">
+            <i class="material-icons">home</i> My posts
+          </div>
+          <div id="menu-my-top-posts" class="mdl-layout__tab mdl-button mdl-js-button mdl-js-ripple-effect">
+            <i class="material-icons">trending_up</i> My top posts
+          </div>
+          <button
+            class="mdl-button mdl-js-button mdl-button--fab mdl-color--amber-400 mdl-shadow--4dp mdl-js-ripple-effect"
+            id="add">
+            <i class="material-icons">mode_edit</i>
+          </button>
+        </div>
+      </div>
+    </header>
+
+    <main class="mdl-layout__content mdl-color--grey-100">
+
+      <!-- Show the add post form -->
+      <section class="mdl-grid content" id="add-post" style="display:none">
+        <div class="mdl-cell mdl-cell--12-col mdl-grid">
 
           <!-- Card containing the inputs to add a new messages -->
           <div class="mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--8-col-tablet
@@ -111,38 +120,56 @@
                 </button>
               </form>
             </div>
+          </div>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <!-- Show a list of recent posts -->
-    <section class="mdl-grid content" id="recent-posts-list" style="display:none">
-      <div class="posts-container mdl-cell mdl-cell--12-col mdl-grid">
-      </div>
-    </section>
+      <!-- Show a list of recent posts -->
+      <section class="mdl-grid content" id="recent-posts-list" style="display:none">
+        <div class="posts-container mdl-cell mdl-cell--12-col mdl-grid">
+        </div>
+      </section>
 
-    <!-- Show the list of user's posts -->
-    <section class="mdl-grid content" id="user-posts-list" style="display:none">
-      <div class="posts-container mdl-cell mdl-cell--12-col mdl-grid">
-      </div>
-    </section>
+      <!-- Show the list of user's posts -->
+      <section class="mdl-grid content" id="user-posts-list" style="display:none">
+        <div class="posts-container mdl-cell mdl-cell--12-col mdl-grid">
+        </div>
+      </section>
 
-    <!-- Show the list of top user's posts -->
-    <section class="mdl-grid content" id="top-user-posts-list" style="display:none">
-      <div class="posts-container mdl-cell mdl-cell--12-col mdl-grid">
-      </div>
-    </section>
-  </main>
-</div>
+      <!-- Show the list of top user's posts -->
+      <section class="mdl-grid content" id="top-user-posts-list" style="display:none">
+        <div class="posts-container mdl-cell mdl-cell--12-col mdl-grid">
+        </div>
+      </section>
+    </main>
+  </div>
 
-<!-- Import and configure the Firebase SDK -->
-<!-- These scripts are made available when the app is served or deployed on Firebase Hosting -->
-<!-- If you do not serve/host your project using Firebase Hosting see https://firebase.google.com/docs/web/setup -->
-<script src="/__/firebase/5.7.0/firebase-app.js"></script>
-<script src="/__/firebase/5.7.0/firebase-auth.js"></script>
-<script src="/__/firebase/5.7.0/firebase-database.js"></script>
-<script src="/__/firebase/init.js"></script>
+  <!-- Import and configure the Firebase SDK -->
+  <!-- These scripts are made available when the app is served or deployed on Firebase Hosting -->
+  <!-- If you do not serve/host your project using Firebase Hosting see https://firebase.google.com/docs/web/setup -->
+  <script src="/__/firebase/5.7.0/firebase-app.js"></script>
+  <script src="/__/firebase/5.7.0/firebase-auth.js"></script>
+  <script src="/__/firebase/5.7.0/firebase-database.js"></script>
+  <script src="/__/firebase/init.js"></script>
 
-<script src="scripts/main.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/5.8.3/firebase.js"></script>
+  <script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyAUpWgj2STkdhRZFYFmjSczGSBqKnFb5c4",
+      authDomain: "gix-mastery-firebase1902.firebaseapp.com",
+      databaseURL: "https://gix-mastery-firebase1902.firebaseio.com",
+      projectId: "gix-mastery-firebase1902",
+      storageBucket: "gix-mastery-firebase1902.appspot.com",
+      messagingSenderId: "102076187121"
+    };
+    //114530752203616954552
+    firebase.initializeApp(config);
+  </script>
+
+
+
+  <script src="scripts/main.js"></script>
 </body>
+
 </html>
