--- a/storage/index.html
+++ b/storage/index.html
@@ -15,6 +15,7 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 <html>
+
 <head>
   <meta charset=utf-8 />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,6 +28,7 @@ limitations under the License.
 
   <link rel="stylesheet" href="main.css">
 </head>
+
 <body>
   <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
 
@@ -43,14 +45,15 @@ limitations under the License.
       <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-grid">
 
         <!-- Container for the demo -->
-        <div class="mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--12-col-desktop">
+        <div
+          class="mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--12-col-desktop">
           <div class="mdl-card__title mdl-color--light-blue-600 mdl-color-text--white">
             <h2 class="mdl-card__title-text">Upload a file</h2>
           </div>
           <div class="mdl-card__supporting-text mdl-color-text--grey-600" id="messagesDiv">
             <p>Select a file below. When it is uploaded, a link will be displayed to the uploaded file.</p>
             <h6>Choose File</h6>
-            <input type="file" id="file" name="file"/>
+            <input type="file" id="file" name="file" />
             <h6>File URL:</h6>
             <span id="linkbox"></span>
           </div>
@@ -82,17 +85,17 @@ limitations under the License.
 
       // Push to child path.
       // [START oncomplete]
-      storageRef.child('images/' + file.name).put(file, metadata).then(function(snapshot) {
+      storageRef.child('images/' + file.name).put(file, metadata).then(function (snapshot) {
         console.log('Uploaded', snapshot.totalBytes, 'bytes.');
         console.log('File metadata:', snapshot.metadata);
         // Let's get a download URL for the file.
-        snapshot.ref.getDownloadURL().then(function(url) {
+        snapshot.ref.getDownloadURL().then(function (url) {
           console.log('File available at', url);
           // [START_EXCLUDE]
-          document.getElementById('linkbox').innerHTML = '<a href="' +  url + '">Click For File</a>';
+          document.getElementById('linkbox').innerHTML = '<a href="' + url + '">Open Uploaded File URL</a>';
           // [END_EXCLUDE]
         });
-      }).catch(function(error) {
+      }).catch(function (error) {
         // [START onfailure]
         console.error('Upload failed:', error);
         // [END onfailure]
@@ -100,21 +103,21 @@ limitations under the License.
       // [END oncomplete]
     }
 
-    window.onload = function() {
+    window.onload = function () {
       document.getElementById('file').addEventListener('change', handleFileSelect, false);
       document.getElementById('file').disabled = true;
 
-      auth.onAuthStateChanged(function(user) {
+      auth.onAuthStateChanged(function (user) {
         if (user) {
           console.log('Anonymous user signed-in.', user);
           document.getElementById('file').disabled = false;
         } else {
           console.log('There was no anonymous session. Creating a new anonymous user.');
           // Sign the user in anonymously since accessing Storage requires the user to be authorized.
-          auth.signInAnonymously().catch(function(error) {
+          auth.signInAnonymously().catch(function (error) {
             if (error.code === 'auth/operation-not-allowed') {
               window.alert('Anonymous Sign-in failed. Please make sure that you have enabled anonymous ' +
-                  'sign-in on your Firebase project.');
+                'sign-in on your Firebase project.');
             }
           });
         }
@@ -122,4 +125,5 @@ limitations under the License.
     }
   </script>
 </body>
+
 </html>
